# app/Http/Requests/IpsWriteRequest.php
@@ -45,6 +45,7 @@ class IpsWriteRequest extends FormRequest
             'actor_user_pid' => ['sometimes', 'integer', 'min:1', 'max:32767'],
             'external_actor_id' => ['sometimes', 'string', 'max:80'],
             'physical_receipt_confirmed' => ['exclude_unless:event,EMG', 'required', 'boolean', 'accepted'],
+            'customs_return_confirmed' => ['exclude_unless:event,EMI', 'sometimes', 'boolean', 'accepted'],
             'delivery_location' => ['nullable', 'string', 'max:25'],
             'non_delivery_reason' => [Rule::requiredIf($this->input('event') === 'EMH'), 'nullable', 'integer', 'min:1'],
             'non_delivery_measure' => [Rule::requiredIf($this->input('event') === 'EMH'), 'nullable', 'string', 'size:1'],
